--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     //okthttp
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
+    //gson
+
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.google.code.gson:gson:2.8.2'
 }
